[gd_scene load_steps=13 format=2]

[ext_resource path="res://TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objetos/plataforma.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objetos/Boton.tscn" type="PackedScene" id=4]
[ext_resource path="res://nivel/Nivel2/Nivel2.gd" type="Script" id=5]
[ext_resource path="res://Objetos/Puerta.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objetos/Da単o/pinches/Pinches.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objetos/Da単o/fuego/Fuego.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objetos/Da単o/lava/Lava.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objetos/Da単o/flecha/Flecha.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objetos/explosivo/TNT.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]

[node name="Nivel3" type="Node2D"]
script = ExtResource( 5 )

[node name="Flecha" parent="." instance=ExtResource( 10 )]
position = Vector2( 41.934, 272.143 )

[node name="Flecha2" parent="." instance=ExtResource( 10 )]
position = Vector2( 61.426, 272.143 )

[node name="Flecha3" parent="." instance=ExtResource( 10 )]
position = Vector2( 23.0326, 272.143 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1441800, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441819, 0, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 2, 0, 1507335, 1, 0, 1507336, 1, 0, 1507337, 1, 0, 1507347, 1, 0, 1507348, 1, 0, 1507349, 1, 0, 1507350, 1, 0, 1507353, 1, 0, 1507355, 5, 0, 1507356, 6, 0, 1507357, 6, 0, 1507358, 6, 0, 1507359, 7, 0, 1572875, 1, 0, 1572876, 1, 0, 1572877, 1, 0, 1638415, 1, 0, 1703953, 1, 0, 1703954, 1, 0, 1703955, 1, 0, 1703956, 1, 0, 1703957, 1, 0, 1703958, 1, 0, 1769497, 1, 0, 1769498, 1, 0, 1769502, 1, 0, 1835037, 1, 0, 1900572, 1, 0, 1966080, 0, 0, 1966081, 1, 0, 1966082, 1, 0, 1966083, 1, 0, 1966084, 1, 0, 1966085, 1, 0, 1966086, 1, 0, 1966087, 1, 0, 1966088, 1, 0, 1966092, 1, 0, 1966093, 1, 0, 1966094, 1, 0, 1966095, 1, 0, 1966096, 1, 0, 1966097, 1, 0, 1966098, 1, 0, 1966099, 1, 0, 1966100, 1, 0, 1966101, 1, 0, 1966102, 1, 0, 1966103, 1, 0, 1966104, 1, 0, 1966105, 1, 0, 1966106, 1, 0, 1966107, 1, 0, 1966108, 1, 0, 1966109, 1, 0, 1966110, 1, 0, 1966111, 1, 0, 1966112, 1, 0, 1966113, 1, 0, 1966114, 1, 0, 1966115, 1, 0, 1966116, 1, 0, 1966117, 2, 0, 2031616, 3, 0, 2031617, 8, 0, 2031618, 8, 0, 2031619, 8, 0, 2031620, 8, 0, 2031621, 8, 0, 2031622, 8, 0, 2031623, 8, 0, 2031624, 8, 0, 2031625, 8, 0, 2031626, 8, 0, 2031627, 8, 0, 2031628, 8, 0, 2031629, 8, 0, 2031630, 8, 0, 2031631, 8, 0, 2031632, 8, 0, 2031633, 8, 0, 2031634, 8, 0, 2031635, 8, 0, 2031636, 8, 0, 2031637, 8, 0, 2031638, 8, 0, 2031639, 8, 0, 2031640, 8, 0, 2031641, 8, 0, 2031642, 8, 0, 2031643, 8, 0, 2031644, 8, 0, 2031645, 8, 0, 2031646, 8, 0, 2031647, 8, 0, 2031648, 8, 0, 2031649, 8, 0, 2031650, 8, 0, 2031651, 8, 0, 2031652, 8, 0, 2031653, 4, 0, 2097152, 3, 0, 2097153, 8, 0, 2097154, 8, 0, 2097155, 8, 0, 2097156, 8, 0, 2097157, 8, 0, 2097158, 8, 0, 2097159, 8, 0, 2097160, 8, 0, 2097161, 8, 0, 2097162, 8, 0, 2097163, 8, 0, 2097164, 8, 0, 2097165, 8, 0, 2097166, 8, 0, 2097167, 8, 0, 2097168, 8, 0, 2097169, 8, 0, 2097170, 8, 0, 2097171, 8, 0, 2097172, 8, 0, 2097173, 8, 0, 2097174, 8, 0, 2097175, 8, 0, 2097176, 8, 0, 2097177, 8, 0, 2097178, 8, 0, 2097179, 8, 0, 2097180, 8, 0, 2097181, 8, 0, 2097182, 8, 0, 2097183, 8, 0, 2097184, 8, 0, 2097185, 8, 0, 2097186, 8, 0, 2097187, 8, 0, 2097188, 8, 0, 2097189, 4, 0, 2162688, 5, 0, 2162689, 6, 0, 2162690, 6, 0, 2162691, 6, 0, 2162692, 6, 0, 2162693, 6, 0, 2162694, 6, 0, 2162695, 6, 0, 2162696, 6, 0, 2162697, 6, 0, 2162698, 6, 0, 2162699, 6, 0, 2162700, 6, 0, 2162701, 6, 0, 2162702, 6, 0, 2162703, 6, 0, 2162704, 6, 0, 2162705, 6, 0, 2162706, 6, 0, 2162707, 6, 0, 2162708, 6, 0, 2162709, 6, 0, 2162710, 6, 0, 2162711, 6, 0, 2162712, 6, 0, 2162713, 6, 0, 2162714, 6, 0, 2162715, 6, 0, 2162716, 6, 0, 2162717, 6, 0, 2162718, 6, 0, 2162719, 6, 0, 2162720, 6, 0, 2162721, 6, 0, 2162722, 6, 0, 2162723, 6, 0, 2162724, 6, 0, 2162725, 7, 0 )

[node name="Lava" parent="." instance=ExtResource( 9 )]
position = Vector2( 150.983, 488.322 )

[node name="Lava2" parent="." instance=ExtResource( 9 )]
position = Vector2( 166.698, 488.322 )

[node name="Lava3" parent="." instance=ExtResource( 9 )]
position = Vector2( 182.693, 488.322 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -4, -82.679 )

[node name="Puerta" parent="." instance=ExtResource( 6 )]
position = Vector2( 496.92, 337.295 )

[node name="plataforma1" type="Node2D" parent="."]
position = Vector2( -78.8922, 224.026 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="plataforma1"]
position = Vector2( 0, -0.707092 )
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataforma1/StaticBody2D"]
visible = false
shape = SubResource( 1 )

[node name="Plataforma" parent="plataforma1" instance=ExtResource( 2 )]
position = Vector2( 0, 49.617 )

[node name="GrooveJoint2D" type="GrooveJoint2D" parent="plataforma1"]
node_a = NodePath("../Plataforma")
node_b = NodePath("../StaticBody2D")
initial_offset = 1.0

[node name="Boton" parent="plataforma1" instance=ExtResource( 4 )]
position = Vector2( 122.893, -15.1279 )

[node name="plataforma2" type="Node2D" parent="."]
position = Vector2( -102.599, 301.49 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="plataforma2"]
position = Vector2( 0, -0.707092 )
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataforma2/StaticBody2D"]
visible = false
shape = SubResource( 1 )

[node name="Plataforma" parent="plataforma2" instance=ExtResource( 2 )]
position = Vector2( -0.292877, 122.203 )

[node name="GrooveJoint2D" type="GrooveJoint2D" parent="plataforma2"]
node_a = NodePath("../Plataforma")
node_b = NodePath("../StaticBody2D")
length = 125.0
initial_offset = 1.0

[node name="Boton" parent="plataforma2" instance=ExtResource( 4 )]
position = Vector2( -90.6762, 117.947 )

[node name="Pinche" parent="." instance=ExtResource( 7 )]
position = Vector2( 264.338, 375.875 )
rotation = 3.14159

[node name="Pinche2" parent="." instance=ExtResource( 7 )]
position = Vector2( 232.162, 345.05 )

[node name="TimerDead" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Fuego" parent="." instance=ExtResource( 8 )]
position = Vector2( 120.507, 363.896 )

[node name="TNT" parent="." instance=ExtResource( 11 )]
[connection signal="hit" from="Flecha" to="." method="_on_game_over"]
[connection signal="hit" from="Flecha2" to="." method="_on_game_over"]
[connection signal="hit" from="Flecha3" to="." method="_on_game_over"]
[connection signal="hit" from="Lava" to="." method="_on_game_over"]
[connection signal="hit" from="Lava2" to="." method="_on_game_over"]
[connection signal="hit" from="Lava3" to="." method="_on_game_over"]
[connection signal="dejoLaPantalla" from="Player" to="." method="_on_game_over"]
[connection signal="apretado" from="plataforma1/Boton" to="." method="_on_Boton_apretado"]
[connection signal="apretado" from="plataforma2/Boton" to="." method="_on_Boton2_apretado"]
[connection signal="hit" from="Pinche" to="." method="_on_game_over"]
[connection signal="hit" from="Pinche2" to="." method="_on_game_over"]
[connection signal="timeout" from="TimerDead" to="." method="_on_TimerDead_timeout"]
[connection signal="hit" from="Fuego" to="." method="_on_game_over"]
